# UAI-Transportation-2025

./: README.md  TODO.md  recitation_one.ipynb
homeworks/: homework_1.tex  homework_2.tex  homework_3.tex  homework_4.tex
homeworks/latex_files/: homework_1.tex  homework_3.tex
lectures/: README.md  lecture_1.md  lecture_2.md  lecture_3.md  lecture_4.md
recitations/: README.md
recitations/recitation_1/: README.md
recitations/recitation_2/: README.md  Recitation_2_Code.ipynb
recitations/recitation_2/code/: data-generation.r  data-transformation.py  main.py  pyproject.toml  testing.py  util_nn_mlarch.py
recitations/recitation_2/data/: README.md  mlogit_Beef_long.csv  mlogit_Cracker_wide.csv  mlogit_HC_wide.csv  mlogit_MobilePhones_long.csv  mlogit_ModeCanada_long.csv  mlogit_Telephone_long.csv  mlogit_TollRoad_wide.csv
recitations/recitation_3/: README.md  Recitation_3_Code.ipynb
recitations/recitation_4/: README.md  recitation_4_code.ipynb
recitations/recitation_4/code/: pyproject.toml  weight_adapter.py
