[project]
name = "code"
version = "0.1.0"
description = "Python and R scripts for discrete choice modeling and deep neural network analysis"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "scipy",
    "statsmodels",
    "torch",
    "openpyxl",
    "biogeme",
    "jupyter",
    "tqdm",
]

[tool.setuptools]
packages = ["code"]
